# CMakeProject

./: CMakeLists.txt  README.md  build.sh  gmon.out  install
libhello/: CMakeLists.txt  hello.c  hello.h
src/: CMakeLists.txt  main.c
